# S30-Agente-con-SmolAgents

./: .gitignore  agent.json  app.py  pyproject.toml  requirements.txt  tarea_final.ipynb  test_build.sh  todo.md
.github/workflows/: deploy-to-hf.yml
tools/: final_answer.py  visit_webpage.py
