[project]
name = "s30-agente-con-smolagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ddgs>=9.12.0",
    "dotenv>=0.9.9",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "rank_bm25>=0.2.2",
    "pandas>=2.3.3",
    "pillow>=12.1.1",
    "pyyaml>=6.0.3",
    "smolagents>=1.24.0",
]
